<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Login</string>
    <string name="title">Already to upgrade your skills?</string>
    <string name="opening_message">Input your data</string>
    <string name="belum_punya_akun">Not already have account?</string>
    <string name="daftar_akun">Register here!</string>
    <string name="opening_image">Opening Image</string>
    <string name="nama">Name</string>
    <string name="daftar">Register</string>
    <string name="sudah_punya_akun">Already have account?</string>
    <string name="login_akun_disini">Login here</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="null_data">Noo, your data is empty :(</string>
</resources>